--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^5.9.24",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "recharts": "^2.1.8",
     "uuid": "^8.2.0",
     "uuidv1": "^1.6.14"
   }
